# robodaq

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bringup/: cam_check.sh  identify_cameras.sh
bringup/udev/: 99-cameras.rules  99-cams.rules
deploy/: Dockerfile
docs/: incident.md  runbook.md  safety.md
eval/: eval.py
recorder/: CMakeLists.txt
recorder/scripts/: mpmc_ring_buffer_throughput_bench.cpp  spsc_ring_buffer_throughput_bench.cpp
recorder/src/: camera_capture_pipeline.cpp  camera_capture_pipeline.hpp  main.cpp  metadata_writer.cpp  metadata_writer.hpp  mpmc_ring_buffer.hpp  performance_monitor.cpp  performance_monitor.hpp  recorder.cpp  recorder.hpp  ring_buffer.hpp  spsc_ring_buffer.hpp  sync_logger.cpp  sync_logger.hpp  video_writer.cpp  video_writer.hpp
teleop/: teleop.py
tools/: qc_fake_run.py
tools/time_logging/: plot_timing_logs.py  test.jsonl  time_logger.cpp
vr_bridge/client/: index.html
vr_bridge/server/: bridge.py
